# utilities

./: .gitignore  CMakeLists.txt  README.md  mvsan.cpp  sanitise_filename.cpp
src/: mvsan  run_sanitise_filename.cpp  sanitise_filename.cpp  sanitise_filename.h  test_sf.cpp
tests/: filenames.txt
